@@ -53,6 +53,6 @@ symlink_target_exists_ok( $t->HOME."/.foobar/gnarz" );
 $t->write_configs("r F .foobar/fnord foobar-fnord");
 $t->fail_unburden_home_dir_default(qw[-f '(']);
 $t->eq_or_diff_stderr("ERROR: Can't handle parameter to -f: ( ".
-                      'at bin/unburden-home-dir line <n>.'."\n");
+                      'at unburden-home-dir line <n>.'."\n");
 
 $t->done();
