@@ -122,14 +122,16 @@ sub call_unburden_home_dir_common {
 sub call_unburden_home_dir {
     my $t   = shift;
     my $ok  = shift;
-    my $cmd = 'perl bin/unburden-home-dir';
+    my $bin = $ENV{ADTTMP} ? '/usr/bin/unburden-home-dir' : 'bin/unburden-home-dir';
+    my $cmd = "perl $bin";
     $t->call_unburden_home_dir_common($ok, $cmd, @_);
 }
 
 sub call_unburden_home_dir_inc_path {
     my $t = shift;
     my $inc_path = shift;
-    my $cmd = "perl -I$inc_path bin/unburden-home-dir";
+    my $bin = $ENV{ADTTMP} ? '/usr/bin/unburden-home-dir' : 'bin/unburden-home-dir';
+    my $cmd = "perl -I$inc_path $bin";
     $t->call_unburden_home_dir_common(1, $cmd, @_, $t->default_parameters);
 }
 
@@ -236,7 +238,8 @@ sub eq_or_diff_file {
     $file = $t->BASE."/$file";
     my $output = read_file($file);
 
-    $output =~ s(at bin/unburden-home-dir line \d+([,.]))(at bin/unburden-home-dir line <n>$1)g;
+    my $bin = $ENV{ADTTMP} ? '/usr/bin/unburden-home-dir' : 'bin/unburden-home-dir';
+    $output =~ s(at $bin line \d+([,.]))(at unburden-home-dir line <n>$1)g;
 
     # Somewhere between coreutils 8.13 (until Wheezy/Quantal), and
     # 8.20 (from Jessie/Raring on) the quoting characters in verbose
