@@ -19,7 +19,7 @@ file_not_empty_ok($t->HOME.'/.foobar/fnord');
 $t->call_unburden_home_dir_default('-F');
 $t->eq_or_diff_stderr("ERROR: Can't handle ".$t->HOME.
                       '/.foobar/fnord: Unexpected type (not a directory) '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -28,7 +28,7 @@ $t->write_configs('m f .foobar/bla foobar-bla');
 $t->call_unburden_home_dir_default('-F');
 $t->eq_or_diff_stderr("ERROR: Can't handle ".$t->HOME.
                       '/.foobar/bla: Unexpected type (not a file) '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -39,7 +39,7 @@ ok( symlink("bla", $t->HOME."/.foobar/gnarz"),
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("WARNING: Can't handle ".$t->HOME.
                       '/.foobar/gnarz: bla not equal '.$t->TP.'-foobar-gnarz '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -53,7 +53,7 @@ ok( write_file($t->TP.'-foobar-hurz', "Some target contents\n"),
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("ERROR: Can't handle ".$t->TP.'-foobar-hurz: '.
                       'Unexpected type (not a directory) '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -67,7 +67,7 @@ $t->create_and_check_directory($t->TP.'-foobar-flaaf',
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("ERROR: Can't handle ".$t->TP.'-foobar-flaaf: '.
                       'Unexpected type (not a file) '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -75,7 +75,7 @@ $t->eq_or_diff_stdout('');
 $t->write_configs("r x .foobar/flaaf foobar-flaaf");
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("Can't parse type 'x', must be 'd', 'D', 'f' or 'F', ".
-                      'skipping... at bin/unburden-home-dir line <n>, '.
+                      'skipping... at unburden-home-dir line <n>, '.
                       '<$list_fh> line 1.'."\n");
 $t->eq_or_diff_stdout('');
 
@@ -83,7 +83,7 @@ $t->eq_or_diff_stdout('');
 $t->write_configs("x f .foobar/flaaf foobar-flaaf");
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("Can't parse action 'x', must be 'd', 'r' or 'm', ".
-                      'skipping... at bin/unburden-home-dir line <n>, '.
+                      'skipping... at unburden-home-dir line <n>, '.
                       '<$list_fh> line 1.'."\n");
 $t->eq_or_diff_stdout('');
 
@@ -91,7 +91,7 @@ $t->eq_or_diff_stdout('');
 $t->write_configs("r f .foobar/flaaf");
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("Can't parse 'r f .foobar/flaaf', skipping... ".
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -99,7 +99,7 @@ $t->eq_or_diff_stdout('');
 $t->write_configs("r f");
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("Can't parse 'r f', skipping... ".
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\n");
 $t->eq_or_diff_stdout('');
 
@@ -111,9 +111,9 @@ ok( system('mkfifo '.$t->HOME.'/.fifo/blarg 1>&2') == 0,
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("WARNING: Can't handle checking open files in ".
                       $t->HOME.'/.fifo/blarg: neither file nor directory '.
-                      'at bin/unburden-home-dir line <n>, <$list_fh> line 1.'.
+                      'at unburden-home-dir line <n>, <$list_fh> line 1.'.
                       "\nERROR: Can't handle ".$t->HOME."/.fifo/blarg: ".
-                      'Unexpected type (not a file) at bin/unburden-home-dir '.
+                      'Unexpected type (not a file) at unburden-home-dir '.
                       'line <n>, <$list_fh> line 1.'."\n");
 $t->eq_or_diff_stdout('');
 
@@ -128,7 +128,7 @@ file_exists_ok($list_file);
 ok( chmod(0, $list_file), "Make list file $list_file unreadable");
 $t->call_unburden_home_dir_default;
 $t->eq_or_diff_stderr("List file $list_file isn't readable, skipping ".
-                      "at bin/unburden-home-dir line <n>.\n");
+                      "at unburden-home-dir line <n>.\n");
 $t->eq_or_diff_stdout('');
 
 $t->done;
