@@ -2,11 +2,16 @@
 
 #use strict;
 use warnings;
+use 5.010;
 
-use Test::More tests => 3;
+use Test::More;
+
+if ( $ENV{ADTTMP} ) {
+    plan( skip_all => "these tests are for release candidate testing" );
+}
+
 use File::Slurp;
 use File::Basename;
-use 5.010;
 
 my $basedir = dirname($0).'/..';
 
@@ -24,3 +29,5 @@ is( $rc, 0, 'unburden-home-dir --version exited with 0');
 
 $dashdash_version =~ s/^.*?(\S+)\n*$/$1/;
 is( $dashdash_version, $VERSION, 'unburden-home-dir --version shows expected version');
+
+done_testing();
